# LifeGame

./: CMakeLists.txt
Qml/: Main.qml
Source/: LifeEngine.cpp  LifeEngine.h  LifeQuickItem.cpp  LifeQuickItem.h  Main.cpp
